6.24.1 (30-03-2021)
- Bug fix: Excluding uilayer paths form ulisboa redirecting filtering

6.24.0 (24-03-2021)
- New feature: Added boolean to disable blue record

6.23.1 (16-03-2021)
- Improvement: Added health card number to registration history report

6.23.0 (12-03-2021)
- Refactor: Remake the screens for managing the degree information

6.22.2 (21-01-2021)
- Bug fix: Replaced reference to deprecated method in lessons management

6.22.1 (20-01-2021)
- Improvement: Add new schoolLevelType to the allowed list in qualification view component

6.22.0 (06-01-2021)
- Improvement: Improvement academic permission service

6.21.3 (19-11-2020)
- Bug fix: Fix broken back navigation from professorship creation

6.21.2 (14-11-2020)
- Refactor: Remove usage of bolonha degree type (deprecated slot)

6.21.1 (10-11-2020)
- Refactor: Upgrade dependency of fenixedu-academic-core (cleanup deprecated execution course slots and methods)

6.21.0 (09-11-2020)
- New feature: Added isBlueRecordAnswered to PersonUlisboaSpecificationsByExecutionYear

6.20.5 (05-11-2020)
- Refactor: Upgrade dependency of fenixedu-academic-core (remove usage of deprecated shift types) 

6.20.4 (27-10-2020)
- Refactor: Remove usage of deprecated shift types

6.20.3 (23-10-2020)
- Refactor: Remove usage of deprecated SchoolClass name method

6.20.2 (20-10-2020)
- Improvement: Modified logic on how to select the most relevant active registration to use in identification card creation
- Refactor: Delete MobilityRegistatrionUlisboaInformation instance

6.20.1 (18-10-2020)
- Improvement: Add slot for number of ucs enrolled in dges candidacies screen

6.20.0 (14-10-2020)
- New Feature: Added Health Card Number to academic office screens according #UL-FBA-1051

6.19.10 (28-09-2020)
- Improvement: Better error message when an official instituition is required 
- Bug fix: Using iso-8859-1 instead of iso-8859-15 when importing DGES file 

6.19.9 (26-09-2020)
- Improvements: More labels changed in CGD interfaces
