@@ -64,15 +64,20 @@
 			<artifactId>fenixedu-academic-extensions</artifactId>
 			<version>4.12.1</version>
 		</dependency>
+                <dependency>
+                        <groupId>org.fenixedu</groupId>
+                        <artifactId>fenixedu-treasury-base</artifactId>
+                        <version>7.0.0</version>
+                </dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-treasury-base</artifactId>
-			<version>5.3.0</version>
+			<version>7.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-treasury-ui</artifactId>
-			<version>5.0.2</version>
+			<version>7.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
