@@ -1,3 +1,5 @@
+- Refactor: Digital Payment Requests
+
 6.24.1 (30-03-2021)
 - Bug fix: Excluding uilayer paths form ulisboa redirecting filtering
 
